Updated board gui

--- a/board.html
+++ b/board.html
@@ -20,9 +20,8 @@
             <div class="eval-bar">
                 <div class="eval-black"></div>
             </div>
-            <!-- <table class="chess-board"> -->
-            <div class="chess-board">
-                <!-- <tbody>
+            <table class="chess-board">
+                <tbody>
                     <tr>
                         <th></th>
                         <th>a</th>
@@ -36,95 +35,95 @@
                     </tr>
                     <tr>
                         <th>8</th>
-                        <td class="light" id="ba8"><div class="piece" id="brook" draggable="true">♜</div></td>
-                        <td class="dark" id="bb8"><div class="piece" id="bknight" draggable="true">♞<;/div></td>
-                        <td class="light" id="bc8"><div class="piece" id="bbish" draggable="true">♝</div></td>
-                        <td class="dark" id="bd8"><div class="piece" id="bqueen" draggable="true">♛</div></td>
-                        <td class="light" id="be8"><div class="piece" id="bking" draggable="true">♚</div></td>
-                        <td class="dark" id="bf8"><div class="piece" id="bbish" draggable="true">♝</div></td>
-                        <td class="light" id="bg8"><div class="piece" id="bknight" draggable="true">♞</div></td>
-                        <td class="dark" id="bh8"><div class="piece" id="brook" draggable="true">♜</div></td>
+                        <td class="light" id="a8">♜</td>
+                        <td class="dark" id="b8">♞</td>
+                        <td class="light" id="c8">♝</td>
+                        <td class="dark" id="d8">♛</td>
+                        <td class="light" id="e8">♚</td>
+                        <td class="dark" id="f8">♝</td>
+                        <td class="light" id="g8">♞</td>
+                        <td class="dark" id="h8">♜</td>
                     </tr>
+                    
                     <tr>
                         <th>7</th>
-                        <td class="dark" id="ba7"><div class="piece" id="bpawn" draggable="true">♟</div></td>
-                        <td class="light" id="bb7"><div class="piece" id="bpawn" draggable="true">♟</div></td>
-                        <td class="dark" id="bc7"><div class="piece" id="bpawn" draggable="true">♟</div></td>
-                        <td class="light" id="bd7"><div class="piece" id="bpawn" draggable="true">♟</div></td>
-                        <td class="dark" id="be7"><div class="piece" id="bpawn" draggable="true">♟</div></td>
-                        <td class="light" id="bf7"><div class="piece" id="bpawn" draggable="true">♟</div></td>
-                        <td class="dark" id="bg7"><div class="piece" id="bpawn" draggable="true">♟</div></td>
-                        <td class="light" id="bh7"><div class="piece" id="bpawn" draggable="true">♟</div></td>
+                        <td class="dark" id="a7">♟</td>
+                        <td class="light" id="b7">♟</td>
+                        <td class="dark" id="c7">♟</td>
+                        <td class="light" id="d7">♟</td>
+                        <td class="dark" id="e7">♟</td>
+                        <td class="light" id="f7">♟</td>
+                        <td class="dark" id="g7">♟</td>
+                        <td class="light" id="h7">♟</td>
                     </tr>
                     <tr>
                         <th>6</th>
-                        <td class="light" id="ea6"></td>
-                        <td class="dark" id="eb6"></td>
-                        <td class="light" id="ec6"></td>
-                        <td class="dark" id="ed6"></td>
-                        <td class="light" id="ee6"></td>
-                        <td class="dark" id="ef6"></td>
-                        <td class="light" id="eg6"></td>
-                        <td class="dark" id="eh6"></td>
+                        <td class="light" id="a6"></td>
+                        <td class="dark" id="b6"></td>
+                        <td class="light" id="c6"></td>
+                        <td class="dark" id="d6"></td>
+                        <td class="light" id="e6"></td>
+                        <td class="dark" id="f6"></td>
+                        <td class="light" id="g6"></td>
+                        <td class="dark" id="h6"></td>
                     </tr>
                     <tr>
                         <th>5</th>
-                        <td class="dark" id="ea5"></td>
-                        <td class="light" id="eb5"></td>
-                        <td class="dark" id="ec5"></td>
-                        <td class="light" id="ed5"></td>
-                        <td class="dark" id="ee5"></td>
-                        <td class="light" id="ef5"></td>
-                        <td class="dark" id="eg5"></td>
-                        <td class="light" id="eh5"></td>
+                        <td class="dark" id="a5"></td>
+                        <td class="light" id="b5"></td>
+                        <td class="dark" id="c5"></td>
+                        <td class="light" id="d5"></td>
+                        <td class="dark" id="e5"></td>
+                        <td class="light" id="f5"></td>
+                        <td class="dark" id="g5"></td>
+                        <td class="light" id="h5"></td>
                     </tr>
                     <tr>
                         <th>4</th>
-                        <td class="light" id="ea4"></td>
-                        <td class="dark" id="eb4"></td>
-                        <td class="light" id="ec4"></td>
-                        <td class="dark" id="ed4"></td>
-                        <td class="light" id="ee4"></td>
-                        <td class="dark" id="ef4"></td>
-                        <td class="light" id="eg4"></td>
-                        <td class="dark" id="eh4"></td>
+                        <td class="light" id="a4"></td>
+                        <td class="dark" id="b4"></td>
+                        <td class="light" id="c4"></td>
+                        <td class="dark" id="d4"></td>
+                        <td class="light" id="e4"></td>
+                        <td class="dark" id="f4"></td>
+                        <td class="light" id="g4"></td>
+                        <td class="dark" id="h4"></td>
                     </tr>
                     <tr>
                         <th>3</th>
-                        <td class="dark" id="ea3"></td>
-                        <td class="light" id="eb3"></td>
-                        <td class="dark" id="ec3"></td>
-                        <td class="light" id="ed3"></td>
-                        <td class="dark" id="ee3"></td>
-                        <td class="light" id="ef3"></td>
-                        <td class="dark" id="eg3"></td>
-                        <td class="light" id="eh3"></td>
+                        <td class="dark" id="a3"></td>
+                        <td class="light" id="b3"></td>
+                        <td class="dark" id="c3"></td>
+                        <td class="light" id="d3"></td>
+                        <td class="dark" id="e3"></td>
+                        <td class="light" id="f3"></td>
+                        <td class="dark" id="g3"></td>
+                        <td class="light" id="h3"></td>
                     </tr>
                     <tr>
                         <th>2</th>
-                        <td class="light" id="wa2"><div class="piece" id="wpawn" draggable="true">♙</div></td>
-                        <td class="dark" id="wb2"><div class="piece" id="wpawn" draggable="true">♙</div></td>
-                        <td class="light" id="wc2"><div class="piece" id="wpawn" draggable="true">♙</div></td>
-                        <td class="dark" id="wd2"><div class="piece" id="wpawn" draggable="true">♙</div></td>
-                        <td class="light" id="we2"><div class="piece" id="wpawn" draggable="true">♙</div></td>
-                        <td class="dark" id="wf2"><div class="piece" id="wpawn" draggable="true">♙</div></td>
-                        <td class="light" id="wg2"><div class="piece" id="wpawn" draggable="true">♙</div></td>
-                        <td class="dark" id="wh2"><div class="piece" id="wpawn" draggable="true">♙</div></td>
+                        <td class="light" id="wa2"><div class="piece" id="a2" draggable="true">♙</div></td>
+                        <td class="dark" id="wb2"><div class="piece" id="b2" draggable="true">♙</div></td>
+                        <td class="light" id="wc2"><div class="piece" id="c2" draggable="true">♙</div></td>
+                        <td class="dark" id="wd2"><div class="piece" id="d2" draggable="true">♙</div></td>
+                        <td class="light" id="we2"><div class="piece" id="e2" draggable="true">♙</div></td>
+                        <td class="dark" id="wf2"><div class="piece" id="f2" draggable="true">♙</div></td>
+                        <td class="light" id="wg2"><div class="piece" id="g2" draggable="true">♙</div></td>
+                        <td class="dark" id="wh2"><div class="piece" id="h2" draggable="true">♙</div></td>
                     </tr>
                     <tr>
                         <th>1</th>
-                        <td class="dark" id="wa1"><div class="piece" id="wrook" draggable="true">♖</div></td>
-                        <td class="light" id="wb1"><div class="piece" id="wknight" draggable="true">♘</div></td>
-                        <td class="dark" id="wc1"><div class="piece" id="wbish" draggable="true">♗</div></td>
-                        <td class="light" id="wd1"><div class="piece" id="wqueen" draggable="true">♕</div></td>
-                        <td class="dark" id="we1"><div class="piece" id="wking" draggable="true">♔</div></td>
-                        <td class="light" id="wf1"><div class="piece" id="wbish" draggable="true">♗</div></td>
-                        <td class="dark" id="wg1"><div class="piece" id="wknight" draggable="true">♘</div></td>
-                        <td class="light" id="wh1"><div class="piece" id="wrook" draggable="true">♖</div></td>
+                        <td class="dark" id="wa1"><div class="piece" id="a1" draggable="true">♖</div></td>
+                        <td class="light" id="wb1"><div class="piece" id="b1" draggable="true">♘</div></td>
+                        <td class="dark" id="wc1"><div class="piece" id="c1" draggable="true">♗</div></td>
+                        <td class="light" id="wd1"><div class="piece" id="d1" draggable="true">♕</div></td>
+                        <td class="dark" id="we1"><div class="piece" id="e1" draggable="true">♔</div></td>
+                        <td class="light" id="wf1"><div class="piece" id="f1" draggable="true">♗</div></td>
+                        <td class="dark" id="wg1"><div class="piece" id="g1" draggable="true">♘</div></td>
+                        <td class="light" id="wh1"><div class="piece" id="h1" draggable="true">♖</div></td>
                     </tr>
-                </tbody> -->
-                 <div id="ascii-board"></div>
-            </div>
+                </tbody>
+            </table>
             <br>
             <p></p>
             <div id="played-moves">
@@ -146,7 +145,7 @@
                 <input name="cache positions" id="file-upload" type="file" onchange="load_caches(this)">
                 
                 <button id="load-model-c" onclick="forge_c(true)">Load Lambda Zero</button>
-                <button id="load-ascii-board" onclick="update_ascii_board()">Update board</button>
+                <!-- <button id="load-ascii-board" onclick="update_ascii_board()">Update board</button> -->
                 <button id="compute-move" onclick="fn()">Generate AI move</button>
 
                 <!-- <form onsubmit="make_move(this, 'input')"> -->
