Added FEN loading, Made general AI improvements

--- a/board.html
+++ b/board.html
@@ -149,7 +149,7 @@
                 <button id="compute-move" onclick="fn()">Generate AI move</button>
 
                 <!-- <form onsubmit="make_move(this, 'input')"> -->
-                    <label for="manual-move">Input Move Manually: </label>
+                    <label for="manual-move">Input Move or FEN Manually: </label>
                     <input id='manual-submit' name="manual-move" value="e4">
                     <button type='button' for="manual-move"
                      onclick="make_move(document.getElementById('manual-submit'),'input')">✔️</button>
