--- a/board.html
+++ b/board.html
@@ -2,12 +2,15 @@
     <head>
         <title></title>
         
+        
         <link rel="stylesheet" href="board_styles.css">
 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
         <script type="module" src="Chess.mjs"></script>
         <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0/dist/tf.min.js"></script>
         <script src="lambdaZero.js"></script>
         <script src="lzeroTraining.js"></script>
+        <script src="network.js"></script>
         <script src="board.js"></script>
         <script type="module" src="utils.mjs"></script>
         <div id="move" class="w"></div>
@@ -20,8 +23,8 @@
             <div class="eval-bar">
                 <div class="eval-black"></div>
             </div>
-            <table class="chess-board">
-                <tbody>
+            <table class="chess-board" id="reload-me">
+                <tbody id="reload-me-2">
                     <tr>
                         <th></th>
                         <th>a</th>
@@ -154,6 +157,7 @@
                     <button type='button' for="manual-move"
                      onclick="make_move(document.getElementById('manual-submit'),'input')">✔️</button>
                 <!-- </form> -->
+                <button id="self-play" onclick="self_play(0)">Initiate self play</button>
             </div>
         </div>
     </body>
